--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
         <link rel="stylesheet" type="text/css" href="thing1.css">    
     </head>
     <body>
-       <div><h1 id="siteName" href="">DevABite</h1></div>
-       <div><p>Take a bite out of development</p>    
+       <div id="header">
+           <div><h1 id="siteName" href="https://github.com/devabite/devabite.github.io">DevABite</h1></div>
+           <div id="tagLine"><p>Take a bite out of development</p></div>
+       </div>
+        <div id="mainArea">
+        </div>
     </body>
     <script></script>
 </html>
