--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
        <div id="header">
-           <div><h1 id="siteName" href="https://github.com/devabite/devabite.github.io">DevABite</h1></div>
+           <div><h1 id="siteName"><a href="https://github.com/devabite/devabite.github.io">DevABite</a></h1></div>
            <div id="tagLine"><p>Take a bite out of development</p></div>
        </div>
         <div id="mainArea">
