--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
            <div id="tagLine"><p>Take a bite out of development</p></div>
        </div>
         <div id="mainArea">
+            <div id="contentArea"></div>
+            <div id="footer">
+                <p>Nothing here.</p>
+            </div>
         </div>
     </body>
     <script></script>
