--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>DevABite</title>
-        <link rel="stylesheet" type="text/css" href="thing1.css">    
-    </head>
-    <body>
-       <div id="header">
-           <div><h1 id="siteName"><a href="https://github.com/devabite/devabite.github.io">DevABite</a></h1></div>
-           <div id="tagLine"><p>Take a bite out of development</p></div>
-       </div>
-        <div id="mainArea">
-            <div id="contentArea"></div>
-            <div id="footer">
-                <p>Nothing here.</p>
-            </div>
-        </div>
-    </body>
-    <script></script>
+	<head>
+    	<link rel="stylesheet" type="text/css" href="thing1.css">
+	</head>
+	<body>
+		<div id="header">
+			<div id="site_name"><h1><a href="https://github.com/devabite/devabite.github.io">Dev A Bite</a></h1></div>
+			<div id="tag_line"><p>Taking A Bite Out of Development</p></div>
+		</div>
+		<div id="torso">
+			<ul id="content">
+				<li class="content_item">
+					<img src="https://bitlabyrinth.com/favicon.ico">
+					<h1><a href="https://BitLabyrinth.com">BitLabyrinth.com</a></h1>
+					<p>Bit Labyrinth is my first website and is dedicated to making games.</p>
+				</li>
+			</ul>
+		</div>
+  
+	</body>
+	<script type="text/javascript" src="thing2.js"></script>
 </html>
