--- a/Adventure/Advntr.html
+++ b/Adventure/Advntr.html
@@ -1,1 +1,18 @@
 
+<!DOCTYPE html>
+<html>
+	<head>
+    	<link rel="stylesheet" type="text/css" href="thing1.css">
+	</head>
+	<body>
+		<div id="header">
+			<div id="site_name"><h1><a href="https://github.com/devabite/devabite.github.io">Dev A Bite</a></h1></div>
+			<div id="tag_line"><p>Taking A Bite Out of Development</p></div>
+		</div>
+		<div id="torso">
+			
+		</div>
+  
+	</body>
+	<script type="text/javascript" src="thing2.js"></script>
+</html>
