--- a/Adventure/Advntr.html
+++ b/Adventure/Advntr.html
@@ -14,5 +14,5 @@
 		</div>
   
 	</body>
-	<script type="text/javascript" src="thing2.js"></script>
+	<script type="text/javascript" src="Advntr.js"></script>
 </html>
